[gd_scene load_steps=112 format=1]

[ext_resource path="res://script/Tile_Placement.gd" type="Script" id=1]
[ext_resource path="res://tile/tile_1_4.scn" type="PackedScene" id=2]
[ext_resource path="res://tile/tile_0_0.scn" type="PackedScene" id=3]
[ext_resource path="res://tile/tile_0_8.scn" type="PackedScene" id=4]
[ext_resource path="res://tile/tile_2_4.scn" type="PackedScene" id=5]
[ext_resource path="res://tile/tile_3_4.scn" type="PackedScene" id=6]
[ext_resource path="res://script/player_movement.gd" type="Script" id=7]
[ext_resource path="res://script/Input.gd" type="Script" id=8]
[ext_resource path="res://art/character/man/walk/body/man_walk_left_0.png" type="Texture" id=9]
[ext_resource path="res://art/character/man/walk/body/man_walk_left_1.png" type="Texture" id=10]
[ext_resource path="res://art/character/man/walk/body/man_walk_left_2.png" type="Texture" id=11]
[ext_resource path="res://art/character/man/walk/body/man_walk_left_3.png" type="Texture" id=12]
[ext_resource path="res://art/character/man/walk/body/man_walk_left_4.png" type="Texture" id=13]
[ext_resource path="res://art/character/man/walk/body/man_walk_left_5.png" type="Texture" id=14]
[ext_resource path="res://art/character/man/walk/body/man_walk_left_6.png" type="Texture" id=15]
[ext_resource path="res://art/character/man/walk/body/man_walk_left_7.png" type="Texture" id=16]
[ext_resource path="res://art/character/man/walk/body/man_walk_down_7.png" type="Texture" id=17]
[ext_resource path="res://art/character/man/walk/body/man_walk_right_7.png" type="Texture" id=18]
[ext_resource path="res://art/character/man/walk/body/man_walk_up_0.png" type="Texture" id=19]
[ext_resource path="res://art/character/man/walk/body/man_walk_up_1.png" type="Texture" id=20]
[ext_resource path="res://art/character/man/walk/body/man_walk_up_2.png" type="Texture" id=21]
[ext_resource path="res://art/character/man/walk/body/man_walk_up_3.png" type="Texture" id=22]
[ext_resource path="res://art/character/man/walk/body/man_walk_up_4.png" type="Texture" id=23]
[ext_resource path="res://art/character/man/walk/body/man_walk_up_5.png" type="Texture" id=24]
[ext_resource path="res://art/character/man/walk/body/man_walk_up_6.png" type="Texture" id=25]
[ext_resource path="res://art/character/man/walk/body/man_walk_up_7.png" type="Texture" id=26]
[ext_resource path="res://art/character/man/walk/body/man_walk_right_0.png" type="Texture" id=27]
[ext_resource path="res://art/character/man/walk/body/man_walk_right_1.png" type="Texture" id=28]
[ext_resource path="res://art/character/man/walk/body/man_walk_right_2.png" type="Texture" id=29]
[ext_resource path="res://art/character/man/walk/body/man_walk_right_3.png" type="Texture" id=30]
[ext_resource path="res://art/character/man/walk/body/man_walk_right_4.png" type="Texture" id=31]
[ext_resource path="res://art/character/man/walk/body/man_walk_right_5.png" type="Texture" id=32]
[ext_resource path="res://art/character/man/walk/body/man_walk_right_6.png" type="Texture" id=33]
[ext_resource path="res://art/character/man/walk/body/man_walk_down_0.png" type="Texture" id=34]
[ext_resource path="res://art/character/man/walk/body/man_walk_down_1.png" type="Texture" id=35]
[ext_resource path="res://art/character/man/walk/body/man_walk_down_2.png" type="Texture" id=36]
[ext_resource path="res://art/character/man/walk/body/man_walk_down_3.png" type="Texture" id=37]
[ext_resource path="res://art/character/man/walk/body/man_walk_down_4.png" type="Texture" id=38]
[ext_resource path="res://art/character/man/walk/body/man_walk_down_5.png" type="Texture" id=39]
[ext_resource path="res://art/character/man/walk/body/man_walk_down_6.png" type="Texture" id=40]
[ext_resource path="res://script/player_sprite_animation.gd" type="Script" id=41]
[ext_resource path="res://art/character/man/walk/shirt/shirt_walk_left_0.png" type="Texture" id=42]
[ext_resource path="res://art/character/man/walk/shirt/shirt_walk_left_1.png" type="Texture" id=43]
[ext_resource path="res://art/character/man/walk/shirt/shirt_walk_left_2.png" type="Texture" id=44]
[ext_resource path="res://art/character/man/walk/shirt/shirt_walk_left_3.png" type="Texture" id=45]
[ext_resource path="res://art/character/man/walk/shirt/shirt_walk_left_4.png" type="Texture" id=46]
[ext_resource path="res://art/character/man/walk/shirt/shirt_walk_left_5.png" type="Texture" id=47]
[ext_resource path="res://art/character/man/walk/shirt/shirt_walk_left_6.png" type="Texture" id=48]
[ext_resource path="res://art/character/man/walk/shirt/shirt_walk_left_7.png" type="Texture" id=49]
[ext_resource path="res://art/character/man/walk/shirt/shirt_walk_down_7.png" type="Texture" id=50]
[ext_resource path="res://art/character/man/walk/shirt/shirt_walk_right_7.png" type="Texture" id=51]
[ext_resource path="res://art/character/man/walk/shirt/shirt_walk_up_0.png" type="Texture" id=52]
[ext_resource path="res://art/character/man/walk/shirt/shirt_walk_up_1.png" type="Texture" id=53]
[ext_resource path="res://art/character/man/walk/shirt/shirt_walk_up_2.png" type="Texture" id=54]
[ext_resource path="res://art/character/man/walk/shirt/shirt_walk_up_3.png" type="Texture" id=55]
[ext_resource path="res://art/character/man/walk/shirt/shirt_walk_up_4.png" type="Texture" id=56]
[ext_resource path="res://art/character/man/walk/shirt/shirt_walk_up_5.png" type="Texture" id=57]
[ext_resource path="res://art/character/man/walk/shirt/shirt_walk_up_6.png" type="Texture" id=58]
[ext_resource path="res://art/character/man/walk/shirt/shirt_walk_up_7.png" type="Texture" id=59]
[ext_resource path="res://art/character/man/walk/shirt/shirt_walk_right_0.png" type="Texture" id=60]
[ext_resource path="res://art/character/man/walk/shirt/shirt_walk_right_1.png" type="Texture" id=61]
[ext_resource path="res://art/character/man/walk/shirt/shirt_walk_right_2.png" type="Texture" id=62]
[ext_resource path="res://art/character/man/walk/shirt/shirt_walk_right_3.png" type="Texture" id=63]
[ext_resource path="res://art/character/man/walk/shirt/shirt_walk_right_4.png" type="Texture" id=64]
[ext_resource path="res://art/character/man/walk/shirt/shirt_walk_right_5.png" type="Texture" id=65]
[ext_resource path="res://art/character/man/walk/shirt/shirt_walk_right_6.png" type="Texture" id=66]
[ext_resource path="res://art/character/man/walk/shirt/shirt_walk_down_0.png" type="Texture" id=67]
[ext_resource path="res://art/character/man/walk/shirt/shirt_walk_down_1.png" type="Texture" id=68]
[ext_resource path="res://art/character/man/walk/shirt/shirt_walk_down_2.png" type="Texture" id=69]
[ext_resource path="res://art/character/man/walk/shirt/shirt_walk_down_3.png" type="Texture" id=70]
[ext_resource path="res://art/character/man/walk/shirt/shirt_walk_down_4.png" type="Texture" id=71]
[ext_resource path="res://art/character/man/walk/shirt/shirt_walk_down_5.png" type="Texture" id=72]
[ext_resource path="res://art/character/man/walk/shirt/shirt_walk_down_6.png" type="Texture" id=73]
[ext_resource path="res://art/character/man/walk/hair/hair_walk_left_0.png" type="Texture" id=74]
[ext_resource path="res://art/character/man/walk/hair/hair_walk_left_1.png" type="Texture" id=75]
[ext_resource path="res://art/character/man/walk/hair/hair_walk_left_2.png" type="Texture" id=76]
[ext_resource path="res://art/character/man/walk/hair/hair_walk_left_3.png" type="Texture" id=77]
[ext_resource path="res://art/character/man/walk/hair/hair_walk_left_4.png" type="Texture" id=78]
[ext_resource path="res://art/character/man/walk/hair/hair_walk_left_5.png" type="Texture" id=79]
[ext_resource path="res://art/character/man/walk/hair/hair_walk_left_6.png" type="Texture" id=80]
[ext_resource path="res://art/character/man/walk/hair/hair_walk_left_7.png" type="Texture" id=81]
[ext_resource path="res://art/character/man/walk/hair/hair_walk_down_7.png" type="Texture" id=82]
[ext_resource path="res://art/character/man/walk/hair/hair_walk_right_7.png" type="Texture" id=83]
[ext_resource path="res://art/character/man/walk/hair/hair_walk_up_0.png" type="Texture" id=84]
[ext_resource path="res://art/character/man/walk/hair/hair_walk_up_1.png" type="Texture" id=85]
[ext_resource path="res://art/character/man/walk/hair/hair_walk_up_2.png" type="Texture" id=86]
[ext_resource path="res://art/character/man/walk/hair/hair_walk_up_3.png" type="Texture" id=87]
[ext_resource path="res://art/character/man/walk/hair/hair_walk_up_4.png" type="Texture" id=88]
[ext_resource path="res://art/character/man/walk/hair/hair_walk_up_5.png" type="Texture" id=89]
[ext_resource path="res://art/character/man/walk/hair/hair_walk_up_6.png" type="Texture" id=90]
[ext_resource path="res://art/character/man/walk/hair/hair_walk_up_7.png" type="Texture" id=91]
[ext_resource path="res://art/character/man/walk/hair/hair_walk_right_0.png" type="Texture" id=92]
[ext_resource path="res://art/character/man/walk/hair/hair_walk_right_1.png" type="Texture" id=93]
[ext_resource path="res://art/character/man/walk/hair/hair_walk_right_2.png" type="Texture" id=94]
[ext_resource path="res://art/character/man/walk/hair/hair_walk_right_3.png" type="Texture" id=95]
[ext_resource path="res://art/character/man/walk/hair/hair_walk_right_4.png" type="Texture" id=96]
[ext_resource path="res://art/character/man/walk/hair/hair_walk_right_5.png" type="Texture" id=97]
[ext_resource path="res://art/character/man/walk/hair/hair_walk_right_6.png" type="Texture" id=98]
[ext_resource path="res://art/character/man/walk/hair/hair_walk_down_0.png" type="Texture" id=99]
[ext_resource path="res://art/character/man/walk/hair/hair_walk_down_1.png" type="Texture" id=100]
[ext_resource path="res://art/character/man/walk/hair/hair_walk_down_2.png" type="Texture" id=101]
[ext_resource path="res://art/character/man/walk/hair/hair_walk_down_3.png" type="Texture" id=102]
[ext_resource path="res://art/character/man/walk/hair/hair_walk_down_4.png" type="Texture" id=103]
[ext_resource path="res://art/character/man/walk/hair/hair_walk_down_5.png" type="Texture" id=104]
[ext_resource path="res://art/character/man/walk/hair/hair_walk_down_6.png" type="Texture" id=105]

[sub_resource type="SpriteFrames" id=1]

resource/name = "man_walk.res"
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ) ],
"loop": true,
"name": "walk_left",
"speed": 9.0
}, {
"frames": [ ExtResource( 17 ) ],
"loop": false,
"name": "idle_down",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ) ],
"loop": false,
"name": "idle_right",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ) ],
"loop": false,
"name": "idle_left",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ) ],
"loop": true,
"name": "walk_up",
"speed": 9.0
}, {
"frames": [ ExtResource( 26 ) ],
"loop": false,
"name": "idle_up",
"speed": 5.0
}, {
"frames": [ ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 18 ) ],
"loop": true,
"name": "walk_right",
"speed": 9.0
}, {
"frames": [ ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 17 ) ],
"loop": true,
"name": "walk_down",
"speed": 9.0
} ]

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ) ],
"loop": true,
"name": "walk_left",
"speed": 5.0
}, {
"frames": [ ExtResource( 50 ) ],
"loop": false,
"name": "idle_down",
"speed": 5.0
}, {
"frames": [ ExtResource( 51 ) ],
"loop": false,
"name": "idle_right",
"speed": 5.0
}, {
"frames": [ ExtResource( 49 ) ],
"loop": false,
"name": "idle_left",
"speed": 5.0
}, {
"frames": [ ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ) ],
"loop": true,
"name": "walk_up",
"speed": 5.0
}, {
"frames": [ ExtResource( 59 ) ],
"loop": false,
"name": "idle_up",
"speed": 5.0
}, {
"frames": [ ExtResource( 60 ), ExtResource( 61 ), ExtResource( 62 ), ExtResource( 63 ), ExtResource( 64 ), ExtResource( 65 ), ExtResource( 66 ), ExtResource( 51 ) ],
"loop": true,
"name": "walk_right",
"speed": 5.0
}, {
"frames": [ ExtResource( 67 ), ExtResource( 68 ), ExtResource( 69 ), ExtResource( 70 ), ExtResource( 71 ), ExtResource( 72 ), ExtResource( 73 ), ExtResource( 50 ) ],
"loop": true,
"name": "walk_down",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]

animations = [ {
"frames": [ ExtResource( 74 ), ExtResource( 75 ), ExtResource( 76 ), ExtResource( 77 ), ExtResource( 78 ), ExtResource( 79 ), ExtResource( 80 ), ExtResource( 81 ) ],
"loop": true,
"name": "walk_left",
"speed": 9.0
}, {
"frames": [ ExtResource( 82 ) ],
"loop": false,
"name": "idle_down",
"speed": 5.0
}, {
"frames": [ ExtResource( 83 ) ],
"loop": false,
"name": "idle_right",
"speed": 5.0
}, {
"frames": [ ExtResource( 81 ) ],
"loop": false,
"name": "idle_left",
"speed": 5.0
}, {
"frames": [ ExtResource( 84 ), ExtResource( 85 ), ExtResource( 86 ), ExtResource( 87 ), ExtResource( 88 ), ExtResource( 89 ), ExtResource( 90 ), ExtResource( 91 ) ],
"loop": true,
"name": "walk_up",
"speed": 9.0
}, {
"frames": [ ExtResource( 91 ) ],
"loop": false,
"name": "idle_up",
"speed": 5.0
}, {
"frames": [ ExtResource( 92 ), ExtResource( 93 ), ExtResource( 94 ), ExtResource( 95 ), ExtResource( 96 ), ExtResource( 97 ), ExtResource( 98 ), ExtResource( 83 ) ],
"loop": true,
"name": "walk_right",
"speed": 9.0
}, {
"frames": [ ExtResource( 99 ), ExtResource( 100 ), ExtResource( 101 ), ExtResource( 102 ), ExtResource( 103 ), ExtResource( 104 ), ExtResource( 105 ), ExtResource( 82 ) ],
"loop": true,
"name": "walk_down",
"speed": 9.0
} ]

[sub_resource type="CircleShape2D" id=5]

custom_solver_bias = 0.0
radius = 5.0

[sub_resource type="GDScript" id=6]

script/source = "extends Position2D

onready var follow_target = get_node(\"../Player\")

func _ready():
	set_process(true)

func _process(delta):
	self.set_pos(follow_target.get_pos() + Vector2(0, 0))
	pass
"

[sub_resource type="GDScript" id=4]

script/source = "extends Camera2D

export var is_zoomed = false

onready var target_zoom = get_zoom()
onready var current_zoom = target_zoom
var _zoom

func _ready():
	set_process(true)
	get_tree().get_root().get_node(\"Main/Window\").connect(\"scale_change\", self, \"scale_changed\")

func _process(delta):
	if (current_zoom - target_zoom).length() > 0.01:
		current_zoom = current_zoom.linear_interpolate(target_zoom, 0.05)
	else:
		current_zoom = target_zoom
	set_zoom(current_zoom)

func scale_changed( scale ):
	if is_zoomed:
		_zoom = Vector2( 1 / scale, 1 / scale)
		target_zoom = _zoom

func _on_Player_skating_start():
	target_zoom = _zoom + Vector2(1, 1)


func _on_Player_skating_end():
	target_zoom = _zoom
"

[node name="Root" type="Node"]

[node name="Map" type="Node" parent="."]

[node name="Tiles" type="Node2D" parent="Map"]

editor/display_folded = true
z/z = -1
script/script = ExtResource( 1 )
move_tiles = true
tile_size = Vector2( 4096, 4096 )

[node name="tile_1_4" parent="Map/Tiles" instance=ExtResource( 2 )]

transform/pos = Vector2( 4096, 16384 )

[node name="tile_0_0" parent="Map/Tiles" instance=ExtResource( 3 )]

[node name="tile_0_1" parent="Map/Tiles" instance=ExtResource( 3 )]

transform/pos = Vector2( 0, 4096 )

[node name="tile_0_2" parent="Map/Tiles" instance=ExtResource( 3 )]

transform/pos = Vector2( 0, 8192 )

[node name="tile_0_3" parent="Map/Tiles" instance=ExtResource( 3 )]

transform/pos = Vector2( 0, 12288 )

[node name="tile_0_4" parent="Map/Tiles" instance=ExtResource( 3 )]

transform/pos = Vector2( 0, 16384 )

[node name="tile_5_0" parent="Map/Tiles" instance=ExtResource( 3 )]

transform/pos = Vector2( 20480, 0 )

[node name="tile_6_0" parent="Map/Tiles" instance=ExtResource( 3 )]

transform/pos = Vector2( 24576, 0 )

[node name="tile_9_0" parent="Map/Tiles" instance=ExtResource( 3 )]

transform/pos = Vector2( 36864, 0 )

[node name="tile_9_1" parent="Map/Tiles" instance=ExtResource( 3 )]

transform/pos = Vector2( 36864, 4096 )

[node name="tile_9_3" parent="Map/Tiles" instance=ExtResource( 3 )]

transform/pos = Vector2( 36864, 12288 )

[node name="tile_9_4" parent="Map/Tiles" instance=ExtResource( 3 )]

transform/pos = Vector2( 36864, 16384 )

[node name="tile_9_5" parent="Map/Tiles" instance=ExtResource( 3 )]

transform/pos = Vector2( 36864, 20480 )

[node name="tile_9_6" parent="Map/Tiles" instance=ExtResource( 3 )]

transform/pos = Vector2( 36864, 24576 )

[node name="tile_1_0" parent="Map/Tiles" instance=ExtResource( 3 )]

transform/pos = Vector2( 4096, 0 )

[node name="tile_2_0" parent="Map/Tiles" instance=ExtResource( 3 )]

transform/pos = Vector2( 8192, 0 )

[node name="tile_3_0" parent="Map/Tiles" instance=ExtResource( 3 )]

transform/pos = Vector2( 12288, 0 )

[node name="tile_4_0" parent="Map/Tiles" instance=ExtResource( 3 )]

transform/pos = Vector2( 16384, 0 )

[node name="tile_0_8" parent="Map/Tiles" instance=ExtResource( 4 )]

transform/pos = Vector2( 0, 32768 )

[node name="tile_0_9" parent="Map/Tiles" instance=ExtResource( 4 )]

transform/pos = Vector2( 0, 36864 )

[node name="tile_1_9" parent="Map/Tiles" instance=ExtResource( 4 )]

transform/pos = Vector2( 4096, 36864 )

[node name="tile_2_9" parent="Map/Tiles" instance=ExtResource( 4 )]

transform/pos = Vector2( 8192, 36864 )

[node name="tile_3_9" parent="Map/Tiles" instance=ExtResource( 4 )]

transform/pos = Vector2( 12288, 36864 )

[node name="tile_7_1" parent="Map/Tiles" instance=ExtResource( 4 )]

transform/pos = Vector2( 28672, 4096 )

[node name="tile_6_6" parent="Map/Tiles" instance=ExtResource( 4 )]

transform/pos = Vector2( 24576, 24576 )

[node name="tile_7_6" parent="Map/Tiles" instance=ExtResource( 4 )]

transform/pos = Vector2( 28672, 24576 )

[node name="tile_7_7" parent="Map/Tiles" instance=ExtResource( 4 )]

transform/pos = Vector2( 28672, 28672 )

[node name="tile_8_8" parent="Map/Tiles" instance=ExtResource( 4 )]

transform/pos = Vector2( 32768, 32768 )

[node name="tile_8_9" parent="Map/Tiles" instance=ExtResource( 4 )]

transform/pos = Vector2( 32768, 36864 )

[node name="tile_9_8" parent="Map/Tiles" instance=ExtResource( 4 )]

transform/pos = Vector2( 36864, 32768 )

[node name="tile_9_9" parent="Map/Tiles" instance=ExtResource( 4 )]

transform/pos = Vector2( 36864, 36864 )

[node name="tile_2_4" parent="Map/Tiles" instance=ExtResource( 5 )]

transform/pos = Vector2( 8192, 16384 )

[node name="tile_3_4" parent="Map/Tiles" instance=ExtResource( 6 )]

transform/pos = Vector2( 12288, 16384 )

[node name="Player" type="Node2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 8192, 20480 )
script/script = ExtResource( 7 )
walk_speed = 50

[node name="Input" type="Node" parent="Player"]

script/script = ExtResource( 8 )

[node name="Body" type="AnimatedSprite" parent="Player"]

frames = SubResource( 1 )
animation = "idle_down"
playing = true
offset = Vector2( 0, -9 )
script/script = ExtResource( 41 )
__meta__ = {
"_edit_group_": true
}

[node name="Shirt" type="AnimatedSprite" parent="Player/Body"]

frames = SubResource( 2 )
animation = "idle_down"
offset = Vector2( 0, -9 )

[node name="Hair" type="AnimatedSprite" parent="Player/Body"]

frames = SubResource( 3 )
animation = "idle_down"
offset = Vector2( 0, -9 )

[node name="Area2D" type="Area2D" parent="Player"]

input/pickable = true
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, -1 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Area2D"]

transform/pos = Vector2( 0, -1 )
shape = SubResource( 5 )
trigger = false
_update_shape_index = 0

[node name="Player_Follow" type="Position2D" parent="."]

script/script = SubResource( 6 )

[node name="Camera2D" type="Camera2D" parent="Player_Follow"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = false
drag_margin/v_enabled = false
smoothing/enable = true
smoothing/speed = 16.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2
script/script = SubResource( 4 )
is_zoomed = true

[connection signal="skating_end" from="Player" to="Player_Follow/Camera2D" method="_on_Player_skating_end"]

[connection signal="skating_start" from="Player" to="Player_Follow/Camera2D" method="_on_Player_skating_start"]

[connection signal="processed" from="Player/Input" to="Player" method="_on_Input_processed"]

[connection signal="processed" from="Player/Input" to="Player/Body" method="_on_Input_processed"]

[connection signal="body_enter" from="Player/Area2D" to="Player" method="_on_Area2D_body_enter"]

[connection signal="body_exit" from="Player/Area2D" to="Player" method="_on_Area2D_body_exit"]


